INCLUDE_DIRECTORIES(${VIGRANUMPY_INCLUDE_DIR})

#IF (CMAKE_GENERATOR MATCHES "Visual Studio")
#  ADD_DEFINITIONS(-DVIGRA_DLL)
#ENDIF (CMAKE_GENERATOR MATCHES "Visual Studio")
#
#IF(HDF5_FOUND)
#    ADD_DEFINITIONS(-DHasHDF5 -D_HDF5USEDLL_ -DHDF5CPP_USEDLL)
#    INCLUDE_DIRECTORIES(${HDF5_INCLUDE_DIR})
#ENDIF(HDF5_FOUND)

ADD_LIBRARY(vigranumpytest SHARED
            vigranumpytest.cxx)

IF(PYTHON_PLATFORM MATCHES "^win32$")
    SET_TARGET_PROPERTIES(vigranumpytest PROPERTIES PREFIX "" SUFFIX  ".pyd")
ELSE()
    SET_TARGET_PROPERTIES(vigranumpytest PROPERTIES PREFIX "")
ENDIF()

TARGET_LINK_LIBRARIES(vigranumpytest ${VIGRANUMPY_LIBRARIES} vigranumpycmodule)
ADD_DEPENDENCIES(vigranumpy vigranumpytest)

SET(TEST_SCRIPTS
    test_arraytypes.py
    test_impex.py
    test_christoph.py
    test_nathan.py
    test_stephan.py)

INCLUDE(VigraAddTest)
VIGRA_COPY_TEST_DATA(${TEST_SCRIPTS})

GET_TARGET_PROPERTY(VIGRAIMPEX_PATH vigraimpex LOCATION)
STRING(REGEX REPLACE "(/\\$\\(OutDir\\)/[^/]*|/[^/]*)$" "" VIGRAIMPEX_PATH ${VIGRAIMPEX_PATH}) # get path prefix
FILE(TO_NATIVE_PATH ${VIGRAIMPEX_PATH} VIGRAIMPEX_PATH)

GET_TARGET_PROPERTY(VIGRANUMPYCMODULE_PATH vigranumpycmodule LOCATION)
STRING(REGEX REPLACE "(/\\$\\(OutDir\\)/[^/]*|/[^/]*)$" "" VIGRANUMPYCMODULE_PATH ${VIGRANUMPYCMODULE_PATH}) # get path prefix
FILE(TO_NATIVE_PATH ${VIGRANUMPYCMODULE_PATH} VIGRANUMPYCMODULE_PATH)

GET_TARGET_PROPERTY(VIGRANUMPYTEST_PATH vigranumpytest LOCATION)
STRING(REGEX REPLACE "(/\\$\\(OutDir\\)/[^/]*|/[^/]*)$" "" VIGRANUMPYTEST_PATH ${VIGRANUMPYTEST_PATH}) # get path prefix
FILE(TO_NATIVE_PATH ${VIGRANUMPYTEST_PATH} VIGRANUMPYTEST_PATH)

FILE(TO_CMAKE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/../lib VIGRANUMPYSCRIPTS_PATH)
FILE(TO_NATIVE_PATH ${VIGRANUMPYSCRIPTS_PATH} VIGRANUMPYSCRIPTS_PATH)

configure_file(${CMAKE_CURRENT_SOURCE_DIR}/set_paths.py 
               ${CMAKE_CURRENT_BINARY_DIR}/set_paths.py 
               @ONLY)

IF (CMAKE_GENERATOR MATCHES "Visual Studio")
    SET(TEST_ARGS . $(OutDir))
ELSE()
    SET(TEST_ARGS .)
ENDIF (CMAKE_GENERATOR MATCHES "Visual Studio")

add_custom_command(
    TARGET vigranumpytest
    POST_BUILD
    COMMAND nosetests ARGS ${TEST_ARGS}
    COMMENT "Running tests")
