project(cylinder)
cmake_minimum_required(VERSION 2.8)
set(CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/config)

find_package(Vigra REQUIRED)
find_package(HDF5 REQUIRED)
message(STATUS ${VIGRA_INCLUDE_DIR} "xxxx")
include_directories(${VIGRA_INCLUDE_DIR})
add_executable(cylinder cylinder.cxx)
target_link_libraries(cylinder ${VIGRA_IMPEX_LIBRARY} ${HDF5_CORE_LIBRARY} ${HDF5_HL_LIBRARY})
