INCLUDE_DIRECTORIES(${VIGRANUMPY_INCLUDE_DIR} ${FFTW3_INCLUDE_DIR})

IF(CMAKE_GENERATOR MATCHES "Visual Studio")
    ADD_DEFINITIONS(-DVIGRA_DLL)
ENDIF (CMAKE_GENERATOR MATCHES "Visual Studio")

ADD_LIBRARY(vigranumpyfourier SHARED
            vigranumpyfourier.cxx)

TARGET_LINK_LIBRARIES(vigranumpyfourier ${FFTW3_LIBRARIES} ${VIGRANUMPY_LIBRARIES} vigranumpycmodule)

ADD_DEPENDENCIES(vigranumpy vigranumpyfourier)

IF(PYTHON_PLATFORM MATCHES "^win32$")
    SET_TARGET_PROPERTIES(vigranumpyfourier PROPERTIES PREFIX "" SUFFIX  ".pyd")
    INSTALL(TARGETS vigranumpyfourier
            RUNTIME DESTINATION ${VIGRA_NUMPY_INSTALL_DIR})
ELSE()
    SET_TARGET_PROPERTIES(vigranumpyfourier PROPERTIES PREFIX "")
    INSTALL(TARGETS vigranumpyfourier
            LIBRARY DESTINATION ${VIGRA_NUMPY_INSTALL_DIR}/vigra)
ENDIF()
